--- a/task-frontend/package.json
+++ b/task-frontend/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/pin-input": "^2.1.0",
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.9",
     "@tanstack/react-query-devtools": "^5.86.0",
