--- a/task-backend/package.json
+++ b/task-backend/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
-    "nodemailer": "^7.0.6"
+    "nodemailer": "^7.0.6",
+    "resend": "^6.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
