--- a/task-backend/package.json
+++ b/task-backend/package.json
@@ -14,6 +14,7 @@
     "@types/morgan": "^1.9.10",
     "bcrypt": "^6.0.0",
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
